# headhunter-automation

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: config.toml.example
src/: argparse.py  config.py  constants.py  main.py  mixins.py  schemas.py  utils.py
src/ai/: __init__.py  base.py  utils.py
src/ai/models/: groq.py
src/api/: __init__.py  client.py  errors.py
src/api/hh_api/: base.py  routes.py
src/api/hh_api/schemas/: blacklisted_employers.py  me.py  my_resumes.py  negotiations.py  negotiations_messages.py  objects.py  resume_info.py  similar_vacancies.py  vacancies.py  vacancy.py
src/operations/: authorize.py  call_api.py  clear_negotiations.py  config.py  get_employer_contacts.py  list_resumes.py  load_candidate_info.py  refresh_token.py  reply_employers.py  update_resumes.py  whoami.py
src/operations/apply_similar/: __init__.py  base.py
src/operations/apply_similar/utils/: __init__.py  negotiations.py  vacancy_relevance.py
src/operations/reply_employers/: __init__.py  utils.py
src/operations/vacancy/: actions.py
tests/operations/: test_apply_similar.py
