[tool.poetry]
name = "headhunter-automation"
version = "0.1.0"
description = ""
authors = ["Mdedz <ilya.business.contact77@gmail.com>"]
packages = [{ include = "*", from = "src" }]
[tool.poetry.dependencies]
python = "^3.10"
requests = { extras = ["socks"], version = "^2.32.3" }
prettytable = "^3.6.0"
pyqt6 = { version = "6.7.0", optional = true }
pyqt6-webengine = { version = "6.7.0", optional = true }
groq = "^0.37.0"
dacite = "^1.9.2"

[tool.poetry.extras]
qt = ["pyqt6", "pyqt6-webengine"]

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
pylint = "^4.0.4"
pytest = "^9.0.1"
ruff = "^0.14.7"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
headhunter-automation = "src.main:main"

[tool.pyright]
typeCheckingMode = "standard"        
exclude = ["venv", "**/__pycache__"]

[tool.ruff]
select = ["E", "F", "I", "W"] 
ignore = ["E203"]
line-length = 120 
per-file-ignores = { "__init__.py" = [
    "F401",
] } 

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
